force-app/main/default/objects/Membership__c/Membership__c.object-meta.xml
<CustomObject>
    <label>Membership</label>
    <nameField>
        <displayFormat>MEMBER-{00000}</displayFormat>
        <label>Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>