force-app/main/default/objects/Membership__c/fields/Associated_CnP_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Associated_CnP_Recurring__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated C&amp;P Recurring</label>
    <referenceTo>CnP_PaaS__CnPRecurring__c</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>