force-app/main/default/objects/Membership__c/fields/Associated_Initial_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Associated_Initial_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Initial Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>