force-app/main/default/objects/Membership__c/fields/Comped_Membership__c.field-meta.xml
<CustomField>
    <fullName>Comped_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comped Membership</label>
    <type>Checkbox</type>
</CustomField>