force-app/main/default/objects/Membership__c/fields/Grace_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_End_Date__c</fullName>
    <formula>IF(ISBLANK(End_Date__c),NULL,End_Date__c + 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grace Period End Date</label>
    <type>Date</type>
</CustomField>