force-app/main/default/objects/Membership__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Crew</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Producer</fullName>
            </value>
            <value>
                <fullName>Artist Foundry</fullName>
            </value>
            <value>
                <fullName>Individual Sustainer</fullName>
            </value>
            <value>
                <fullName>Family Sustainer</fullName>
            </value>
            <value>
                <fullName>Crew Sustainer</fullName>
            </value>
            <value>
                <fullName>Director Sustainer</fullName>
            </value>
            <value>
                <fullName>Producer Sustainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>