force-app/main/default/objects/Membership__c/fields/Override_to_Mark_as_Lapsed_Former__c.field-meta.xml
<CustomField>
    <fullName>Override_to_Mark_as_Lapsed_Former__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used in validation rules -- allows restrictions to be put in place so only system processes can mark a membership as lapsed/former ahead of their close date.</inlineHelpText>
    <label>Override to Mark as Lapsed/Former?</label>
    <type>Checkbox</type>
</CustomField>