force-app/main/default/objects/Membership__c/fields/PC_Email__c.field-meta.xml
<CustomField>
    <fullName>PC_Email__c</fullName>
    <label>PC Email</label>
    <type>Email</type>
</CustomField>