force-app/main/default/objects/Membership__c/fields/Send_2_week_Expiration_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_2_week_Expiration_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to trigger the email that is sent 2 weeks after the membership has expired.</description>
    <label>Send 2 week Expiration Email</label>
    <type>Checkbox</type>
</CustomField>