force-app/main/default/objects/Membership__c/validationRules/NonSustainerMembershipsRequireEnd.validationRule-meta.xml
<ValidationRule>
    <fullName>NonSustainerMembershipsRequireEnd</fullName>
    <active>true</active>
    <description>Forces non-sustainer type memberships to also include an end date</description>
    <errorConditionFormula>NOT(CONTAINS(TEXT(Level__c), &quot;Sustainer&quot;)) &amp;&amp; ISBLANK(End_Date__c)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>When recording a non-sustaining membership, you must specify an end date (equal to a year after the start date)</errorMessage>
</ValidationRule>