force-app/main/default/objects/Membership__c/listViews/Active_Status.listView-meta.xml
<ListView>
    <fullName>Active_Status</fullName>
    <columns>Account__c</columns>
    <columns>End_Date__c</columns>
    <columns>Grace_Period_End_Date__c</columns>
    <columns>Level__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active</label>
    <language>en_US</language>
</ListView>