force-app/main/default/objects/Membership__c/listViews/Artist_Foundry.listView-meta.xml
<ListView>
    <fullName>Artist_Foundry</fullName>
    <columns>Account__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Artist Foundry</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Artist Foundry</label>
</ListView>