force-app/main/default/objects/Membership__c/listViews/Inactive.listView-meta.xml
<ListView>
    <fullName>Inactive</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Lapsed/Former</value>
    </filters>
    <label>Inactive</label>
</ListView>