force-app/main/default/objects/Membership__c/listViews/Sustainers.listView-meta.xml
<ListView>
    <fullName>Sustainers</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>Account__c</columns>
    <columns>Level__c</columns>
    <columns>Status__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Individual Sustainer</value>
    </filters>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Family Sustainer</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Sustainers</label>
</ListView>